[package]
name = "pulsevision"
version = "0.1.0"
edition = "2021"

[dependencies]
rp-pico = "0.9.0"
embedded-hal ="1.0.0"
panic-halt = "1.0.0"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
pio = "0.2.0"

[features]
default = ["rp-pico/rt"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
