[package]
name = "pulsevision"
version = "0.1.0"
edition = "2021"

[dependencies]
rp-pico = "0.9.0"
embedded-hal ="1.0.0"
panic-halt = "1.0.0" # Set panicking behaviour to halt
panic-probe = { version = "1.0.0", features = ["print-defmt"] } # Set panicking behaviour to log a defmt error code
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
pio = "0.2.0"
defmt = "1.0.1" # Deferred formatting
defmt-rtt = "1.1.0" # defmt over rtt

[features]
default = ["rp-pico/rt"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
