[package]
name = "pulsevision"
version = "0.1.0"
edition = "2021"

[dependencies]
rp-pico = "0.9.0"
embedded-hal ="1.0.0"
panic-halt = "1.0.0" # Set panicking behaviour to halt
panic-probe = { version = "1.0.0", features = ["print-defmt"] } # Set panicking behaviour to log a defmt error code
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
defmt = "1.0.1" # Deferred formatting
defmt-rtt = "1.1.0" # defmt over rtt
libm = "0.2.15" # C math library

# Fixed dependencies (Do not upgrade!)
pio = "0.2.0" # Using 0.3 might return Type definition errors with the rp-pico::hal::pio
pio-proc = "0.2" #Using 

[features]
default = ["rp-pico/rt"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
